dataset1235/2025-2/2318198438/users/3878856075/executions/2445341515_1245234979.log
== SUBMISSION (2025-09-02 01:12:20)
-- CODE: 
peso=float(input(":"))
quantidade=(float(input(":")))
x=peso-(5*quantidade)
            
print(round(x,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
::171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
::1899.78
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
::159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
::1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
::385.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
::899.78
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:12:08)
-- CODE: 
peso=float(input(":"))
quantidade=(float(input(":")))
x=peso-(5*quantidade)
            
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
::171.5
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
::1899.78
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
::159.4
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
::1064.55
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
::385.2
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
::899.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:11:04)
-- CODE: 
peso=float(input(":"))
quantidade=(float(input(":"))
x=5*quantidade
            
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
File "XXXX", line 2
    quantidade=(float(input(":"))
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:11:21)
-- CODE: 
peso=float(input(":"))
quantidade=(float(input(":")))
x=5*quantidade
            
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
272.50
20.2
---- correct output:
171.5
---- user output:
::101.0
-- TEST CASE 2:
---- input:
2000.3333
20.11
---- correct output:
1899.78
---- user output:
::100.55
-- TEST CASE 3:
---- input:
244.35
16.99
---- correct output:
159.4
---- user output:
::84.95
-- TEST CASE 4:
---- input:
1125.0
12.09
---- correct output:
1064.55
---- user output:
::60.45
-- TEST CASE 5:
---- input:
530.2
29.00
---- correct output:
385.2
---- user output:
::145.0
-- TEST CASE 6:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
::100.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
